--- a/ClarifEye.xcodeproj/xcshareddata/xcschemes/LiDARDepthAPISample.app.xcscheme
+++ b/ClarifEye.xcodeproj/xcshareddata/xcschemes/LiDARDepthAPISample.app.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "AEF65FCB2774A66600A82EB8"
                BuildableName = "LiDARDepthAPISample.app"
                BlueprintName = "LiDARDepthAPISample.app"
-               ReferencedContainer = "container:LiDARDepth.xcodeproj">
+               ReferencedContainer = "container:ClarifEye.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -53,7 +53,7 @@
             BlueprintIdentifier = "AEF65FCB2774A66600A82EB8"
             BuildableName = "LiDARDepthAPISample.app"
             BlueprintName = "LiDARDepthAPISample.app"
-            ReferencedContainer = "container:LiDARDepth.xcodeproj">
+            ReferencedContainer = "container:ClarifEye.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
