--- a/ClarifEye/Info.plist
+++ b/ClarifEye/Info.plist
@@ -6,5 +6,7 @@
 	<string>????</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>This application will use the camera for Augmented Reality and Computer Vision.</string>
 </dict>
 </plist>
