i got things to kinda work

--- a/ClarifEye/Info.plist
+++ b/ClarifEye/Info.plist
@@ -8,5 +8,12 @@
 	<false/>
 	<key>NSCameraUsageDescription</key>
 	<string>This application will use the camera for Augmented Reality and Computer Vision.</string>
+	<key>UIMainStoryboardFile</key>
+	<string>Main</string>
+	<key>UIRequiredDeviceCapabilities</key>
+	<array>
+		<string>armv7</string>
+		<string>arkit</string>
+	</array>
 </dict>
 </plist>
